# Python_web

Homework_10/: .gitignore  api.py  config.ini  create_data.py  docker-compose.yaml  lru_cache.py  lru_cache_exemple.py  main.py  models.py  mongo_client.py  redis_client.py  repository.py  styles.py  view.py
Homework_11_Flask/: pyproject.toml
Homework_11_Flask/config/: config.py
Homework_11_Flask/data/: app.db.sqlite3
Homework_11_Flask/migrations/versions/: 2583f5e3b622_contacts_miration.py  898df9e8ad71_initial_migration.py
Homework_11_Flask/personal_app/: __init__.py  models.py
Homework_11_Flask/personal_app/repository/: contacts.py  users.py
Homework_11_Flask/personal_app/routes/: auth.py  contacts.py
Homework_11_Flask/personal_app/static/: style.css
Homework_11_Flask/personal_app/templates/: base.html
Homework_11_Flask/personal_app/templates/auth/: login.html
Homework_11_Flask/personal_app/templates/contacts/: contacts.html
Homework_11_Flask/src/: __init__.py  db.py  models.py
Homework_11_Flask/src/routes/: auth.py  contacts.py
Homework_11_Flask/src/templates/: base.html
Homework_13_Django_tailwind/: README.md
Homework_14/: main.py  news.json  pyproject.toml
Homework_14/news_aggrigator/: news.json  scrapy.cfg
Homework_14/news_aggrigator/news_aggrigator/: db.py  db_config.py  items.py  middlewares.py  models.py  news.db  pipelines.py  settings.py
Homework_14/news_aggrigator/news_aggrigator/spiders/: get_news.py
Homework_2/: Personal-Assistant Diagram.drawio  Untitled Diagram.drawio
Homework_4/: file_parser.py  main.py  parser.py  (+1 more)
(+42 files in other folders)
