[tool.poetry]
name = "homework_14"
version = "0.1.0"
description = ""
authors = ["Aleksandra0001 <104300297+Aleksandra0001@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.42"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
